fix: page buttons overflow issue

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -56,6 +56,7 @@
 
 .page-actions {
 	align-items: center;
+	overflow: auto;
 	.btn {
 		height: var(--btn-height);
 		margin-left: var(--margin-sm, 8px);
